--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Image Editor 2.8</title>
+    <title>Easy Image Editor</title>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.12/cropper.min.js"></script>
     <script src="https://unpkg.com/utif@3.1.0/UTIF.js"></script>
@@ -368,7 +368,7 @@
 <body>
     <div class="page-wrapper" id="page-wrapper">
         <header>
-            <h1>Easy Image Editor 2.7</h1>
+            <h1>Easy Image Editor 2.8</h1>
             <div class="header-controls">
                 <div class="zoom-control-header">
                     <label for="zoom-slider">Zoom</label>
